deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amx-app
spec:
  selector:
    app: amx-app
  ports:
    - name: http
      port: 80
      targetPort: http
