deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amx-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: amx-air-hubs.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amx-app
                port:
                  number: 80
